--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1493,7 +1493,7 @@ heading page
 */
 
 section.heading-page {
-  background-image: url(../images/WhatsApp\ Image\ 2023-11-04\ à\ 08.46.22_185bbe9a.jpg);
+  background-image: url(../images/WhatsApp\ Image\ 2023-11-04\ à\ 11.17.18_a678865c.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
